Terminé el Header

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cartas Espiral</title>
+    <link rel="stylesheet" href="./index.css">
+    <title>El Espiral</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+        <div class="logo">   
+            <img src="./recursos/baraja.png" alt=""> El Espiral
+        </div>
+        <ul class="menu">
+            <li>comprar</li>
+            <li>comprar</li>
+            <li>comprar</li>
+            <li>comprar</li>
+            <li>comprar</li>
+        </ul>
+    </nav>
+    </header>
+    <main class="jumbo">test</main>
+    <section class="additional">test</section>
+    <footer>test</footer>
 </body>
 </html>
