main, e inicio de footer

--- a/index.html
+++ b/index.html
@@ -14,16 +14,41 @@
             <img src="./recursos/baraja.png" alt=""> El Espiral
         </div>
         <ul class="menu">
-            <li>comprar</li>
-            <li>comprar</li>
-            <li>comprar</li>
-            <li>comprar</li>
-            <li>comprar</li>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Tienda</a></li>
+            <li><a href="#">Únete a la comunidad</a></li>
+            <li><a href="#">Iniciar Sesión</a></li>
         </ul>
     </nav>
     </header>
-    <main class="jumbo">test</main>
+    <main>
+        <div class="jumbo">
+        <div class="imgjumbo">
+            <img src="./recursos/cardistry.jpg" alt="">
+        </div>
+        <div class="form">
+            <h1>¡Aprende el arte de Cardistry!</h1>
+            <p>Deslumbra a tus amigos y audiencia con movimientos impresionantes creados por los mejores cardists del mundo!</p>
+            <h1>¡Te regalamos la primera clase!</h1>
+            <input type="text" placeholder="Correo">
+            <button>Quiero mi clase gratis</button>
+        </div>
+
+    </div>
+    </main>
     <section class="additional">test</section>
-    <footer>test</footer>
+    <footer>
+        <div class="redes">
+            <h3>Siguenos en Redes Sociales</h3>
+            <ul>
+                <li><a href="#"><img src="./recursos/fb.png" alt="">facebook</a></li>
+                <li><a href="#"><img src="./recursos/ig.png" alt="">instagram</a></li>
+                <li><a href="#"><img src="./recursos/yt.png" alt="">youtube</a></li>
+                <li><a href="#"><img src="./recursos/tw.png" alt="">twitch</a></li>
+                <li><a href="#"><img src="./recursos/whp.png" alt="">whatsapp</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
