terminado main, en proceso footer y adicionales

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
         <div class="logo">   
-            <img src="./recursos/baraja.png" alt=""> El Espiral
+            <a href="#"><img src="./recursos/baraja.png" alt=""> El Espiral</a>
         </div>
         <ul class="menu">
             <li><a href="#">Inicio</a></li>
@@ -34,10 +34,28 @@
             <input type="text" placeholder="Correo">
             <button>Quiero mi clase gratis</button>
         </div>
-
     </div>
     </main>
-    <section class="additional">test</section>
+    <section>
+        <div  class="additional">
+        <div class="form">
+            <h1>¡Visita nuestra tienda!</h1>
+            <p>¡Consigue las mejores barajas de colección para tus movimientos!</p>
+            <a href="#">Ver Tienda</a>
+        </div>
+        <img src="./recursos/cardist.jpg" alt="">
+        </div>
+    </section>
+    <section>
+        <div  class="additional">
+            <img src="./recursos/cardist.jpg" alt="">
+        <div class="form">
+            <h1>Entra a nuestro Blog</h1>
+            <p>Descubre todos los eventos relevantes en el mundo del Cardistry y no te pierdas las noticias, torneos, Jams, reviews, y mucho más</p>
+            <a href="#">Ir al Blog</a>
+        </div>
+        </div>
+    </section>
     <footer>
         <div class="redes">
             <h3>Siguenos en Redes Sociales</h3>
