--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <h1>¡Aprende el arte de Cardistry!</h1>
             <p>Deslumbra a tus amigos y audiencia con movimientos impresionantes creados por los mejores cardists del mundo!</p>
             <h1>¡Te regalamos la primera clase!</h1>
-            <input type="text" placeholder="Correo">
+            <input type="text" placeholder="Tu nombre">
+            <input type="text" placeholder="Tu Correo">
             <button>Quiero mi clase gratis</button>
         </div>
     </div>
@@ -43,12 +44,13 @@
             <p>¡Consigue las mejores barajas de colección para tus movimientos!</p>
             <a href="#">Ver Tienda</a>
         </div>
-        <img src="./recursos/cardist.jpg" alt="">
+        <img src="./recursos/tiend.jpg" alt="">
         </div>
     </section>
     <section>
         <div  class="additional">
             <img src="./recursos/cardist.jpg" alt="">
+        
         <div class="form">
             <h1>Entra a nuestro Blog</h1>
             <p>Descubre todos los eventos relevantes en el mundo del Cardistry y no te pierdas las noticias, torneos, Jams, reviews, y mucho más</p>
@@ -57,8 +59,9 @@
         </div>
     </section>
     <footer>
+        <div class="piedepagina">
         <div class="redes">
-            <h3>Siguenos en Redes Sociales</h3>
+            <h3>Redes Sociales</h3>
             <ul>
                 <li><a href="#"><img src="./recursos/fb.png" alt="">facebook</a></li>
                 <li><a href="#"><img src="./recursos/ig.png" alt="">instagram</a></li>
@@ -67,6 +70,35 @@
                 <li><a href="#"><img src="./recursos/whp.png" alt="">whatsapp</a></li>
             </ul>
         </div>
+        <div class="redes">
+            <h3>Tienda</h3>
+            <ul>
+                <li><a href="#">Facturación</a></li>
+                <li><a href="#">Sucursales</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Devoluciones</a></li>
+            </ul>
+        </div>
+        <div class="redes">
+            <h3>Blog</h3>
+            <ul>
+                <li><a href="#">Noticias</a></li>
+                <li><a href="#">Torneos</a></li>
+                <li><a href="#">Reviews</a></li>
+                <li><a href="#">Cardists</a></li>
+            </ul>
+        </div>
+        <div class="redes">
+            <h3>Curso</h3>
+            <ul>
+                <li><a href="#">Temario</a></li>
+                <li><a href="#">Precios</a></li>
+                <li><a href="#">Duración</a></li>
+                <li><a href="#">FAQ</a></li>
+            </ul>
+        </div>
+        
+    </div>
     </footer>
 </body>
 </html>
