corregir imagen porque github distingue mayusculas y min

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p>¡Consigue las mejores barajas de colección para tus movimientos!</p>
             <a href="#">Ver Tienda</a>
         </div>
-        <img src="./recursos/tiend.jpg" alt="">
+        <img src="./recursos/tiend.JPG" alt="">
         </div>
     </section>
     <section>
